@@ -74,14 +74,15 @@ public class AuthorizationFilter implements GlobalFilter, Ordered {
 
       AccountCheckDTO checkDTO = checkResponse.getData();
 
-      // 将 user 的信息放入 HttpHeader 中
+      // 重写 request，将 user 的信息放入 HttpHeader 中
       ServerHttpRequest request = exchange.getRequest().mutate()
-          .header(GatewayConstants.ACCOUNT_NAME, URLEncoder.encode(String.valueOf(checkDTO.getAccountId()), "UTF-8"))
-          .header(GatewayConstants.ACCOUNT_ID, URLEncoder.encode(String.valueOf(checkDTO.getAccountId()), "UTF-8"))
-          .header(GatewayConstants.ROLE_ID_LIST, URLEncoder.encode(JSONUtil.toJsonStr(checkDTO.getRoleIdList()), "UTF-8"))
-          .header(GatewayConstants.PHONE, URLEncoder.encode(checkDTO.getPhone(), "UTF-8"))
-          .header(GatewayConstants.ACCOUNT_TYPE, URLEncoder.encode(String.valueOf(checkDTO.getAccountType()), "UTF-8"))
+          .header(GatewayConstants.ACCOUNT_NAME, URLEncoder.encode(String.valueOf(checkDTO.getAccountId()), GatewayConstants.UTF_8))
+          .header(GatewayConstants.ACCOUNT_ID, URLEncoder.encode(String.valueOf(checkDTO.getAccountId()), GatewayConstants.UTF_8))
+          .header(GatewayConstants.ROLE_ID_LIST, URLEncoder.encode(JSONUtil.toJsonStr(checkDTO.getRoleIdList()), GatewayConstants.UTF_8))
+          .header(GatewayConstants.PHONE, URLEncoder.encode(checkDTO.getPhone(), GatewayConstants.UTF_8))
+          .header(GatewayConstants.ACCOUNT_TYPE, URLEncoder.encode(String.valueOf(checkDTO.getAccountType()), GatewayConstants.UTF_8))
           .build();
+
       return chain.filter(exchange.mutate().request(request).build());
     } catch (UnsupportedEncodingException e) {
       e.printStackTrace();
